--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,17 @@ name: deephaven-caddy
 
 services:
   deephaven-foo:
-    image: ghcr.io/deephaven/server:0.25.0
+    image: ghcr.io/deephaven/server:0.26.1
+    volumes:
+      - ./deephaven.prop:/opt/deephaven/config/deephaven.prop:ro
 
   deephaven-bar:
-    image: ghcr.io/deephaven/server:0.25.0
+    image: ghcr.io/deephaven/server:0.26.1
+    volumes:
+      - ./deephaven.prop:/opt/deephaven/config/deephaven.prop:ro
 
   reverse-proxy:
-    image: caddy:2.6.4
+    image: caddy:2.7.2
     restart: unless-stopped
     ports:
       - "80:80"
